--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ionk Ar Pandit – Portfolio</title>
+    <title>Onkar Sharma</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Basic styles – you can move into styles.css */
